Build the engine and add the "--enable-preview" argument